rtest/tests/jsr335/Semantics/InterfaceMethods/MethodDeclarations/ShouldFail/syntax02/Test.java
// .result=COMPILE_FAIL


public class Test {
	interface A {
		default boolean equals(Object o) { return true; } 
	}
}